--- a/wiki/MainPage.wiki
+++ b/wiki/MainPage.wiki
@@ -7,7 +7,7 @@ This wiki is dedicated to the Rubik's Cube multiplayer game being written for CE
   * Chris Boyle
   * Chris Lockhart
   * Jason Spruill
-  * Steven Shofner
+  * [StevenPage Steven Shofner]
 
 
 
