Edited wiki page through web user interface.

--- a/wiki/MainPage.wiki
+++ b/wiki/MainPage.wiki
@@ -10,4 +10,5 @@ This wiki is dedicated to the Rubik's Cube multiplayer game being written for CE
   * [IdeasOfSteven Steven Shofner]
 
 = Potential References = 
-[http://www.bluerosegames.com/brg/xna101.aspx BlueRose XNA 101 Tutorials]
+ * [http://www.bluerosegames.com/brg/xna101.aspx BlueRose XNA 101 Tutorials]
+ * [http://randomchaosuk.blogspot.com/ Randomchaos XNA engine]
