--- a/wiki/IdeasOfSteven.wiki
+++ b/wiki/IdeasOfSteven.wiki
@@ -18,7 +18,7 @@ _Global Game parameters can apply to any mode._
   * Challenge Mode
   * Backdrop
   * Picture Cubelets
-  * Color Duplication
+  * Color Duplication (opposite sides)
 
 = Single-Player Modes = 
   * Scenario (complete a starting configuration within a specified metric)
