--- a/wiki/Ideas.wiki
+++ b/wiki/Ideas.wiki
@@ -15,6 +15,12 @@
   * Allow unlimited (if possible ?) connections for the ultimate in match play.
   * Use client/server model (not P2P) for centralized control.
 
+= Controls =
+  * Abstract input sources
+    * keyboard
+    * mouse
+    * gamepad
+
 = Global Game Parameters =
 _Global Game parameters can apply to any mode._
   * Single-Player vs. Multi-Player
@@ -41,4 +47,11 @@ _Events to mix up a Rubik's Cube game, changing the game experience without chan
   * A cubelet becomes locked for 3 moves
   * Certain rotations are made by the computer (slow enough to follow and undo easily)
 
+_Events to regress player progress_
+  * Rigoti's revenge: cube explodes and reforms into different configuration
+    * Would occur if solver takes too long or based on some other criteria
+    * Perhaps could happen to good players competing against not so good players. (Handicap)
+
 [MainPage]
+
+
