Edited wiki page through web user interface.

--- a/wiki/SystemsRequirements.wiki
+++ b/wiki/SystemsRequirements.wiki
@@ -1,5 +1,5 @@
-#summary This page contains the System Requirements for the Rubiks Cube application.
+#summary This page contains the System Requirements for the Rubik's Cube application.
 
 = Introduction =
 
-The document is empty currently.  
+The document is empty currently. The format of this document is described by the [SystemsRequirementsFormat IEEE format].
