Edited wiki page through web user interface.

--- a/wiki/Documentation.wiki
+++ b/wiki/Documentation.wiki
@@ -2,4 +2,4 @@
 
 = Documentation =
 
-  *  [http://rubiks-cube-challenge.googlecode.com/svn/trunk/documentation/ Software Requirements Specification]
+  *  [http://rubiks-cube-challenge.googlecode.com/svn/trunk/documentation/rcube_srs.doc Software Requirements Specification]
