--- a/wiki/MajorSoftwarePhases.wiki
+++ b/wiki/MajorSoftwarePhases.wiki
@@ -1,5 +1,17 @@
 #summary This document contains the major software phases.
 
-= Introduction =
+= Milestone 1.0 =
 
-This document is empty.
+= Milestone 1.1 =
+
+= Milestone 1.2 =
+
+= Milestone 1.3 =
+
+= Milestone 1.4 =
+
+= Milestone 1.5 =
+
+= Milestone 1.6 =
+
+= Milestone 1.7 =
