Edited wiki page through web user interface.

--- a/wiki/MainPage.wiki
+++ b/wiki/MainPage.wiki
@@ -1,7 +1,7 @@
 #summary The entry page for the Rubik's Cube Challenge
 
 = Introduction =
-This wiki is dedicated to the Rubik's Cube multiplayer game being written for CECS 550.  We are using Google Code as our host, which provides 100MB of storage space.
+This wiki is dedicated to the Rubik's Cube multiplayer game.
 
 = Members =
   * Chris Boyle
@@ -13,7 +13,3 @@ This wiki is dedicated to the Rubik's Cube multiplayer game being written for CE
   * [Ideas]
   * [MajorSoftwarePhases Major Software Phases]
   * [Documentation]
-
-= Potential References = 
- * [http://www.bluerosegames.com/brg/xna101.aspx BlueRose XNA 101 Tutorials]
- * [http://randomchaosuk.blogspot.com/ Randomchaos XNA engine]
